# PST

./: .gitignore  LICENSE  README.md  environment.yaml  pyproject.toml  s  train_esm2sat.py  train_pst.py
config/: config.yaml  esm_gearnet.yaml  esm_proteinshake.yaml  integration_test_config.yaml  pst_gearnet.yaml  pst_gearnet_finetune.yaml  pst_inference.yaml  pst_inference_config.yaml  pst_pretrain.yaml  pst_proteinshake.yaml  sat_gearnet.yaml  sat_proteinshake.yaml
config/base_model/: esm2_t12.yaml  esm2_t30.yaml  esm2_t33.yaml  esm2_t6.yaml
config/dataset/: gearnet_ec.yaml  gearnet_go_bp.yaml  gearnet_go_cc.yaml  gearnet_go_mf.yaml  scop.yaml
config/mode/: debug.yaml
config/task/: binding_site_detection.yaml  enzyme_class.yaml  gene_ontology.yaml  ligand_affinity.yaml  pfam.yaml  protein_protein_interface.yaml  structural_class.yaml  structure_similarity.yaml
config/training/: debug.yaml  default.yaml  gearnet_finetune.yaml
data_utils/: __init__.py  ca_only_feat.py  cyanure_utils.py  ec_dataset.py  get_data_from_gearnet_loader.py  metrics.py  mlp_utils.py  mutation.py  pdb_manual_parser.py  sklearn_utils.py  td_test.py
examples/processed/: data_0.pt  data_1.pt  data_2.pt  data_3.pt
experiments/baselines/: dms_seq.json  esm_gearnet.py  esm_mutation.py  esm_proteinshake.py  esm_scop.py
experiments/edge_attr/: command_edge_attr_models.sh
experiments/finetuned/: finetune_gearnet.py  finetune_scop.py
experiments/fixed/: predict_gearnet.py  predict_mutation.py  predict_proteinshake.py  predict_scop.py  utils.py
experiments/struct_only/: command_struct_only_experiment.sh
pst/: data_utils.py  dataset.py  esm2.py  feat.py  gnn_layers.py  metrics.py  modules.py  multioutput.py  rotary_embedding.py  trainer.py  transforms.py  util.py  utils.py
pst/downstream/: __init__.py  mlp.py  mutation.py  sklearn_wrapper.py
scripts/: example_dataset.py  pst_extract.py  pst_inference.py
tests/: conftest.py
tests/integration/: test_train_esm2sat.py
